--- a/src/components/SnakeGame/snakeGame.module.scss
+++ b/src/components/SnakeGame/snakeGame.module.scss
@@ -1,15 +1,8 @@
+@import "constants/constants.scss";
+
 .snake_wrapper {
   margin: 0 auto;
   width: 100%;
-
-  .title {
-    text-align: center;
-    font-size: 48px;
-    font-weight: bold;
-    margin: 10px 0;
-    text-transform: uppercase;
-    font-family: Nabla;
-  }
 
   .level_box {
     display: flex;
@@ -29,6 +22,21 @@
     display: flex;
     justify-content: center;
     margin: 24px 0;
+  }
+
+  .additional_text {
+    color: $color_grey;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+
+    p {
+      width: 500px;
+
+      a {
+        color: $color_mint
+      }
+    }
   }
 }
 
