--- a/src/components/Forms/form.module.scss
+++ b/src/components/Forms/form.module.scss
@@ -17,23 +17,22 @@
       margin: 24px auto;
     }
 
+    .form__text {
+      color: $color_lightGrey;
+      margin: 20px 0;
+      text-align: center;
+    }
+
     .form__box {
       display: flex;
       flex-direction: column;
       gap: 24px;
-    }
 
-    input[type="checkbox"] {
-      display: inline;
-      width: 25px;
-      height: 25px;
-      margin-right: 15px;
-    }
-
-    .form__checkbox {
-      cursor: pointer;
-      width: 150px;
-      margin-left: 50px;
+      .form__submit_button {
+        display: block;
+        margin: 0 auto;
+        font-size: 1rem;
+      }
     }
   }
 
@@ -44,12 +43,6 @@
     a {
       color: $color_mint;
     }
-  }
-
-  .form__submit_button {
-    display: block;
-    margin: 0 auto;
-    font-size: 1rem;
   }
 
   .form__return_button {
