--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -29,11 +29,18 @@
       }
     }
 
-    .link_text {
-      color: #fff;
-      font-weight: 600;
-      font-size: 16px;
+    .link {
       text-decoration: none;
+
+      .link__text {
+        color: #fff;
+        font-weight: 600;
+        font-size: 16px;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
     }
   }
 }
