--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -29,6 +29,16 @@
       }
     }
 
+    .userBox {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+
+      .userName {
+        color: #fff;
+      }
+    }
+
     .link {
       text-decoration: none;
 
@@ -42,5 +52,21 @@
         }
       }
     }
+  }
+}
+
+.popover {
+  padding: 0 10px;
+  min-width: 150px;
+  text-align: center;
+
+  .popover_link {
+    display: block;
+    text-decoration: none;
+    color: $color_grey;
+    font-weight: 600;
+    font-size: 16px;
+    padding: 16px 0;
+    cursor: pointer;
   }
 }
