--- a/src/components/SnakeGame/snakeGame.module.scss
+++ b/src/components/SnakeGame/snakeGame.module.scss
@@ -52,4 +52,10 @@
       font-weight: bold;
     }
   }
+
+  .record_text {
+    font-size: 24px;
+    font-weight: 700;
+    color: $color_red;
+  }
 }
