minor bug fixed

--- a/src/components/Forms/form.module.scss
+++ b/src/components/Forms/form.module.scss
@@ -31,7 +31,7 @@
       .forgot_password {
         text-align: right;
         a {
-          color: $color_lightGrey;
+          color: $color_mint;
         }
       }
 
